add new functional

--- a/public/admin/index.html
+++ b/public/admin/index.html
@@ -10,8 +10,11 @@
 
 </head>
 <body>
-    <h1>Адмін панель</h1>
-    <div class="orderContainer"></div>
+    <div class="wrap">
+        <h1>Адмін панель</h1>
+        <div class="orderContainer"></div>
+    </div>
+  
 <script src="./main.js"></script>    
 </body>
 </html>
