--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,10 @@
 </head>
 <body>
 
+    <div class="notificationPopup">
+        замовлення збережено
+
+    </div>
 
     <div class="cartPopup">
         <div class="cartPopupContainer"></div>
